<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/a0"
    tools:context=".cuestionario">

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="670dp"
        android:layout_centerInParent="true"
        tools:ignore="ExtraText">


        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-black"
            android:text="CUESTIONARIO"
            android:textSize="35dp" />

        <TextView
            android:id="@+id/tvi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv1"
            android:layout_alignLeft="@id/tv2"
            android:layout_marginTop="40dp"
            android:text="Los últimos 5 días usted..."
            android:fontFamily="sans-serif-condensed"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvi"
            android:layout_alignLeft="@id/tv2"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20dp"
            android:text="@string/p1" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv2"
            android:layout_alignLeft="@id/tv3"
            android:layout_marginTop="60dp"
            android:text="@string/p2"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv3"
            android:layout_alignLeft="@id/tv4"
            android:layout_marginTop="60dp"
            android:text="@string/p3"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv4"
            android:layout_alignLeft="@id/tv5"
            android:layout_marginTop="60dp"
            android:text="@string/p4"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20dp" />


        <RadioGroup
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv2"
            android:layout_marginTop="4dp"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/s1"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:text="Si" />

            <RadioButton
                android:id="@+id/n1"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="No"
                app:layout_constraintStart_toEndOf="@+id/s1" />

        </RadioGroup>

        <RadioGroup
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv3"
            android:layout_marginTop="4dp"
            >
            <RadioButton
                android:id="@+id/s2"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:text="Si" />

            <RadioButton
                android:id="@+id/n2"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="No" />

        </RadioGroup>

        <RadioGroup
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv4"
            android:layout_marginTop="4dp"
            >

            <RadioButton
                android:id="@+id/s3"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:text="Si" />

            <RadioButton
                android:id="@+id/n3"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="No"
                />

        </RadioGroup>

        <RadioGroup
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv5"
            android:layout_marginTop="4dp"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/s4"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:text="Si" />

            <RadioButton
                android:id="@+id/n4"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="No"
                app:layout_constraintStart_toEndOf="@+id/s4" />

        </RadioGroup>

    </RelativeLayout>


</RelativeLayout>