<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="40dp"
        android:text="@string/bienvenido"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/greeting"
            app:layout_constraintLeft_toLeftOf="@+id/greeting"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/emailTitle"
        app:layout_constraintTop_toBottomOf="@+id/emailTitle" />

        <TextView
            android:id="@+id/NameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintLeft_toLeftOf="@+id/greeting"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/NameTitle"
            app:layout_constraintLeft_toLeftOf="@+id/emailTitle"
            android:layout_marginLeft="30dp"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/ageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edad"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/Name"
            app:layout_constraintLeft_toLeftOf="@+id/NameTitle"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ageTitle"
            app:layout_constraintLeft_toLeftOf="@+id/NameTitle"
            android:layout_marginLeft="30dp"
            android:textSize="20sp" /><![CDATA[


        />







    ]]>

    <Button
        android:id="@+id/signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="334dp"
        android:onClick="logout"
        android:text="Logout!"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495" />

    <Button
        android:id="@+id/signOut4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age"
        android:layout_marginTop="339dp"
        android:layout_toStartOf="@+id/signOut"
        android:onClick="misEventos"
        android:text="Mis eventos"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.488" />

    <Button
        android:id="@+id/signOut5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="menu"
        android:text="Menú"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821" />


</androidx.constraintlayout.widget.ConstraintLayout>